# Hackathon2018

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/: Test_dialogue_tree.txt  example.txt  plot_tree.txt  test.txt
include/: Node.hpp  TextParser.hpp
src/: Node.cpp  TextParser.cpp  main.cpp
